# VirtualResonators

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ResonatorProject.jucer  ResonatorTest.filtergraph  VirtualResonators.jucer  generate_tests.sh  run_tests.sh
.github/workflows/: cmake.yml  msbuild.yml
Misc/MacOS/: font_and_colour_designer.cpp
Source/: DecibelSlider.cpp  DecibelSlider.h  NoteSlider.cpp  NoteSlider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Resonator.cpp  Resonator.h  ResonatorModels.cpp  ResonatorModels.h  StringModel.cpp  StringModel.h  VirtualResonators.h
Source/Debug/: DebugComponent.cpp  DebugComponent.h  DebugPanel.cpp  DebugPanel.h
Source/GUI/: DecibelSlider.h  GUI.h  PluckButton.h  PresetControl.h  ResonatorControl.h  ResonatorToggle.h  VRComponent.h  VRLookAndFeel.cpp  VRLookAndFeel.h
Test/: VirtualResonatorsTest.h  generate_source_module.sh
Test/UnitTests/: PluginProcessorTest.h  StringModelTest.h
